kubernetes/clusters/1276-dev/keycloak/keycloak/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    dns.kian.sh/provider: internal
    external-dns.alpha.kubernetes.io/hostname: sso.dev.techgarden.gg
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
  hostnames:
    - sso.dev.techgarden.gg
  rules:
    - backendRefs:
        - name: keycloak-service
          port: 8080
